# PACS-P4

./: .clang-format  .gitignore  CMakeLists.txt  compile.sh
include/: join_threads.hpp  thread_pool.hpp  threadsafe_queue.hpp
src/: smallpt_thread_pool.cpp
